promtail-deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: monitoring
spec:
  selector:
    matchLabels:
      name: promtail
  template:
    metadata:
      labels:
        name: promtail
    spec:
      serviceAccountName: promtail
      containers:
        - name: promtail
          image: grafana/promtail:latest
          args:
            - -config.file=/etc/promtail/promtail-config.yaml
          volumeMounts:
            - name: config
              mountPath: /etc/promtail
      volumes:
        - name: config
          configMap:
            name: promtail-config
