spring-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-app
  namespace: cicd # Specify the namespace
  labels:
    app: gitops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitops-app
  template:
    metadata:
      labels:
        app: gitops-app
    spec:
      containers:
      - name: gitops-app
        image: zacklordbing1909/gitops-app-repo:latest # Replace with your Docker Hub image
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
