docker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-daemon
  namespace: cicd
spec:
  selector:
    app: docker-daemon
  ports:
    - protocol: TCP
      port: 2375
      targetPort: 2375
