grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000        # Grafana service port
      targetPort: 3000  # Grafana container port
      nodePort: 32000   # Exposed port on the node (range: 30000-32767)
