prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '9090'
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090        # Prometheus service port
      targetPort: 9090  # Prometheus container port
      nodePort: 32090   # Exposed NodePort (between 30000-32767)
