spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-app-service
  namespace: cicd
  labels:
    app: gitops-app
spec:
  selector:
    app: gitops-app
  ports:
  - protocol: TCP
    port: 80 # External port for cluster-internal communication
    targetPort: 9090 # Internal container port
    nodePort: 32091 # NodePort for external access (must be in the range 30000-32767)
  type: NodePort
